--- a/doc/tutorial/train.Rmd
+++ b/doc/tutorial/train.Rmd
@@ -2,8 +2,8 @@ Training a Learner
 ==================
 
 Training a learner just means fitting a model to a given data set.
-In the **mlr** package this can be done by calling the function [train](http://www.statistik.tu-dortmund.de/~bischl/rdocs/mlr/html/train.html) that 
-provides a unified interface to all integrated [learners](http://www.statistik.tu-dortmund.de/~bischl/rdocs/mlr/html/learners.html) passing a learner 
+In the **mlr** package this can be done by calling the function [train](http://berndbischl.github.io/mlr/train.html) that 
+provides a unified interface to all integrated [learners](http://berndbischl.github.io/mlr/learners.html) passing a learner 
 and a LearnTask_.
 
 
@@ -41,16 +41,16 @@ Further information
 -------------------
 
 As already mentioned, we can train a learner simply by
-calling the function [train](http://www.statistik.tu-dortmund.de/~bischl/rdocs/mlr/html/train.html), passing it a [Learner](http://www.statistik.tu-dortmund.de/~bischl/rdocs/mlr/html/makeLearner.html) and a [task](http://www.statistik.tu-dortmund.de/~bischl/rdocs/mlr/html/SupervisedTask.html). 
+calling the function [train](http://berndbischl.github.io/mlr/train.html), passing it a [Learner](http://berndbischl.github.io/mlr/makeLearner.html) and a [task](http://berndbischl.github.io/mlr/SupervisedTask.html). 
 In the examples above, the classification or regression method was specified 
-by special [Learner](http://www.statistik.tu-dortmund.de/~bischl/rdocs/mlr/html/makeLearner.html) objects. This allows for a maximum of flexibility, for example it permits setting the hyperparameters of the learner before training. 
+by special [Learner](http://berndbischl.github.io/mlr/makeLearner.html) objects. This allows for a maximum of flexibility, for example it permits setting the hyperparameters of the learner before training. 
 
 Optionally, only a subset of the data, specified by an index set, can be used to 
-train the learner. This set is passed using the ``subset`` argument of [train](http://www.statistik.tu-dortmund.de/~bischl/rdocs/mlr/html/train.html).
+train the learner. This set is passed using the ``subset`` argument of [train](http://berndbischl.github.io/mlr/train.html).
 
-The return value is always an object of class [WrappedModel](http://www.statistik.tu-dortmund.de/~bischl/rdocs/mlr/html/makeWrappedModel.html), which wraps the
+The return value is always an object of class [WrappedModel](http://berndbischl.github.io/mlr/makeWrappedModel.html), which wraps the
 particular model of the used R classification or regression method. It
-can subsequently be used to perform a [prediction](http://www.statistik.tu-dortmund.de/~bischl/rdocs/mlr/html/predict.WrappedModel.html) for new
+can subsequently be used to perform a [prediction](http://berndbischl.github.io/mlr/predict.WrappedModel.html) for new
 observations.
 
 
