--- a/doc/tutorial/task.Rmd
+++ b/doc/tutorial/task.Rmd
@@ -6,11 +6,11 @@ data set and all relevant information regarding the purpose of the
 task. This will be at least the target variable, but might also be
 information about excluded (ID) variables or case weights.
 
-Currently two subclasses of a [LearnTask](http://www.statistik.tu-dortmund.de/~bischl/rdocs/mlr/html/LearnTask-class.html) exist: [ClassifTask](http://www.statistik.tu-dortmund.de/~bischl/rdocs/mlr/html/ClassifTask-class.html) for
-classification and [RegrTask](http://www.statistik.tu-dortmund.de/~bischl/rdocs/mlr/html/RegrTask-class.html) for regression problems.  A
-classification task is created by using the [makeClassifTask](http://www.statistik.tu-dortmund.de/~bischl/rdocs/mlr/html/makeClassifTask.html) factory
+Currently two subclasses of a [LearnTask](http://berndbischl.github.io/mlr/LearnTask-class.html) exist: [ClassifTask](http://berndbischl.github.io/mlr/ClassifTask-class.html) for
+classification and [RegrTask](http://berndbischl.github.io/mlr/RegrTask-class.html) for regression problems.  A
+classification task is created by using the [makeClassifTask](http://berndbischl.github.io/mlr/makeClassifTask.html) factory
 method. The target variable is converted to a ``factor``, if it is a
-``logical``, ``integer`` or ``character`` vector. Accordingly use [makeRegrTask](http://www.statistik.tu-dortmund.de/~bischl/rdocs/mlr/html/makeRegrTask.html)
+``logical``, ``integer`` or ``character`` vector. Accordingly use [makeRegrTask](http://berndbischl.github.io/mlr/makeRegrTask.html)
 in order to define a regression task. The target variable is converted 
 to a ``numeric``.
 
@@ -87,12 +87,12 @@ task <- makeClassifTask(id = "BreastCancer", data = df, target = "Class",
                         positive = "malignant")
 ``` 
 
-The [makeClassifTask](http://www.statistik.tu-dortmund.de/~bischl/rdocs/mlr/html/makeClassifTask.html) help page lists several other arguments that can be 
+The [makeClassifTask](http://berndbischl.github.io/mlr/makeClassifTask.html) help page lists several other arguments that can be 
 passed to describe further details of the classification problem.
 
 There are some convenient methods to access properties of the data
 set and the classification problem. Look at the documentation of the
-[LearnTask](http://www.statistik.tu-dortmund.de/~bischl/rdocs/mlr/html/LearnTask-class.html) class and its subclasses [ClassifTask](http://www.statistik.tu-dortmund.de/~bischl/rdocs/mlr/html/ClassifTask-class.html) and [RegrTask](http://www.statistik.tu-dortmund.de/~bischl/rdocs/mlr/html/RegrTask-class.html), if
+[LearnTask](http://berndbischl.github.io/mlr/LearnTask-class.html) class and its subclasses [ClassifTask](http://berndbischl.github.io/mlr/ClassifTask-class.html) and [RegrTask](http://berndbischl.github.io/mlr/RegrTask-class.html), if
 you are interested in the kind of "getter"-functions, which are
 available. Here are some examples:
 
@@ -108,11 +108,11 @@ Get values of the target variable for all observations.
 head(getTaskTargets(task))
 ```
 
-All information can be obtained from the slots of the [LearnTask](http://www.statistik.tu-dortmund.de/~bischl/rdocs/mlr/html/LearnTask-class.html)
+All information can be obtained from the slots of the [LearnTask](http://berndbischl.github.io/mlr/LearnTask-class.html)
 object directly.
 
-The main part of the information is stored in the slot called ``desc``,
-which stands for description. (``task@desc`` is an object of class [TaskDesc](http://www.statistik.tu-dortmund.de/~bischl/rdocs/mlr/html/TaskDesc-class.html).)
+The main part of the information is stored in the slot called `desc`,
+which stands for description. (`task$task.desc` is an object of class [TaskDesc](http://berndbischl.github.io/mlr/TaskDesc-class.html).)
 
 ```{r}
 task$task.desc
@@ -160,7 +160,7 @@ getTaskFeatureNames(task)
 head(getTaskTargets(task))
 ```
 
-Inspect [TaskDesc](http://www.statistik.tu-dortmund.de/~bischl/rdocs/mlr/html/TaskDesc.html).
+Inspect [TaskDesc](http://berndbischl.github.io/mlr/TaskDesc.html).
 
 ```{r}
 task$task.desc
