--- a/doc/tutorial/makeBaggingWrapper.Rmd
+++ b/doc/tutorial/makeBaggingWrapper.Rmd
@@ -1,3 +1,7 @@
+```{r makeBaggingWrapper_init,include=FALSE}
+set.seed(1)
+```
+
 Bagging Wrapper
 ========================================================
 
@@ -18,11 +22,12 @@ Of course we also need a `learner` which we have to pass to `makeBaggingWrapper(
 
 ```{r makeBaggingWrapper_setup}
 library(mlr)
+library(mlbench) #for the datasets
 data(Sonar)
 tsk = makeClassifTask(data=Sonar, target="Class")
 lrn = makeLearner("classif.PART")
 rsmpl = makeResampleDesc("CV", iters=10)
-bagLrn = makeBaggingWrapper(lrn, bag.iters=50, bag.replace=TRUE, bag.size=0.8, bag.feats=3/4)
+bagLrn = makeBaggingWrapper(lrn, bag.iters=50, bag.replace=TRUE, bag.size=0.8, bag.feats=3/4, predict.type="prob")
 ```
 No as we have set up everything we are curious how good the bagging performs.
 First let's try it without bagging:
@@ -35,4 +40,34 @@ resultBagging = resample(learner=bagLrn, task=tsk, resampling=rsmpl)
 ```
 It conusmes more time but can outperform not bagged learners on noisy data with many variables.
 
+
+
+Additional Measures
+-------------------
+Using *Bagging* you can get an estimated *standard deviation* regardless of the learner.
+In the following we will give a small example on a regression.
+
+```{r makeBaggingWrapper_regression}
+data(BostonHousing)
+train.inds = seq(1, 506, 3)
+test.inds  = setdiff(1:nrow(BostonHousing), train.inds)
+task = makeRegrTask("regrtask", data=BostonHousing, target="medv") 
+lrn = makeLearner("regr.randomForest")
+bagLrn = makeBaggingWrapper(lrn, predict.type="se")
+mod = train(learner=bagLrn, task=task, subset=train.inds)
+pred = predict(mod, newdata=BostonHousing, subset=test.inds)
+head(pred$data)
+```
+In the column labled `se` the standard deviation for each prediction (`response`) is given.
+
+Let us visualise this a bit using [ggplot2](http://ggplot2.org/).
+Here we plot the *percentage of lower status of the population* (`lstat`) against the prediction.
+```{r makeBaggingWrapper_regressionPlot}
+library("ggplot2")
+library("reshape2")
+data = cbind(pred$data, BostonHousing[test.inds,])
+g = ggplot(data, aes(x=lstat, y=response, ymin=response-se, ymax=response+se, col=age))
+g + geom_point() + geom_linerange(alpha=0.5)
+```
+For more details about the date see `?BostonHousing`.
 
