links in cool Stuff

--- a/doc/tutorial/cool_stuff.Rmd
+++ b/doc/tutorial/cool_stuff.Rmd
@@ -3,4 +3,4 @@ Cool Stuff
 
 In this section we want to show you some of the cool stuff you can acchieve with **mlr**.
 
-* `makeBaggingWrapper()` You can wrap all the learners supported by **mlr** in a nice bagging method improving stability of the predictions.
+* [`makeBaggingWrapper()`](makeBagginWrapper.md) You can wrap all the learners supported by **mlr** in a nice bagging method improving stability of the predictions.
