Multiple improvements in tutorial: Filtering (Fixes #30)

--- a/doc/tutorial/benchmark_experiments.Rmd
+++ b/doc/tutorial/benchmark_experiments.Rmd
@@ -45,7 +45,7 @@ learners = c("classif.lda", "classif.qda")
 ## Define cross-validation indices 
 rdesc = makeResampleDescription("CV", iters = 5)
 
-res <- bench.exp(learners, task, rdesc)
+res = bench.exp(learners, task, rdesc)
 ``` 
 
 The above code should be mainly self-explanatory. In the result every
