--- a/doc/tutorial/learner.Rmd
+++ b/doc/tutorial/learner.Rmd
@@ -33,7 +33,7 @@ Classification example
 
 ```{r}
 library("mlr")
-lrn <- makeLearner("classif.rpart")
+lrn = makeLearner("classif.rpart")
 lrn
 ```                 
 
@@ -52,14 +52,14 @@ Now let's create a [Learner](http://berndbischl.github.io/mlr/man/makeLearner.ht
 an ID.
 
 ```{r}
-lrn <- makeLearner("classif.rpart", minsplit = 7, cp = 0.03, id = "myrpart")
+lrn = makeLearner("classif.rpart", minsplit = 7, cp = 0.03, id = "myrpart")
 lrn
 ```
 
 This is how to get posterior probabilities when making a [prediction](http://berndbischl.github.io/mlr/man/predict.WrappedModel.html).
 
 ```{r}
-lrn <- makeLearner("classif.rpart", predict.type = "prob")
+lrn = makeLearner("classif.rpart", predict.type = "prob")
 lrn
 ```
 
@@ -70,7 +70,7 @@ Regression example
 Create a rpart [Learner](http://berndbischl.github.io/mlr/man/makeLearner.html) for regression. 
 
 ```{r}
-lrn <- makeLearner("regr.rpart")
+lrn = makeLearner("regr.rpart")
 lrn
 ```                 
 
@@ -78,7 +78,7 @@ Finally, let's create a Gradient Boosting Machine [Learner](http://berndbischl.g
 and an ID.
 
 ```{r}
-lrn <- makeLearner("regr.gbm", n.trees = 500, distribution = "laplace", interaction.depth = 3,
+lrn = makeLearner("regr.gbm", n.trees = 500, distribution = "laplace", interaction.depth = 3,
                    id = "mygbm")
 lrn
 ```
