--- a/doc/tutorial/predict.Rmd
+++ b/doc/tutorial/predict.Rmd
@@ -18,9 +18,9 @@ for the same data set.
 ```{r}
 library("mlr")
 
-task <- makeClassifTask(data = iris, target = "Species")
-lrn <- makeLearner("classif.lda")
-mod <- train(lrn, task = task)
+task = makeClassifTask(data = iris, target = "Species")
+lrn = makeLearner("classif.lda")
+mod = train(lrn, task = task)
 predict(mod, newdata = iris)
 ``` 
 
@@ -35,9 +35,9 @@ library("mlr")
 library("mlbench")
 data(BostonHousing)
 
-task <- makeRegrTask(data = BostonHousing, target = "medv")
-lrn <- makeLearner("regr.lm")
-mod <- train(lrn, task)
+task = makeRegrTask(data = BostonHousing, target = "medv")
+lrn = makeLearner("regr.lm")
+mod = train(lrn, task)
 predict(mod, newdata = BostonHousing)
 ```
 
@@ -72,20 +72,20 @@ first one and [predict](http://berndbischl.github.io/mlr/man/predict.WrappedMode
 library("mlr")
 
 # At first we define the classification task.
-task <- makeClassifTask(data = iris, target = "Species")
+task = makeClassifTask(data = iris, target = "Species")
 
 # Define the learning algorithm
-lrn <- makeLearner("classif.rpart")
+lrn = makeLearner("classif.rpart")
 
 # Split the iris data into a training set for learning and a test set.
-training.set <- seq(from = 1, to = nrow(iris), by = 2)
-test.set <- seq(from = 2, to = nrow(iris), by = 2)
+training.set = seq(from = 1, to = nrow(iris), by = 2)
+test.set = seq(from = 2, to = nrow(iris), by = 2)
 
 # Now, we can train a decision tree using only the observations in ``train.set``:
-mod <- train(lrn, task, subset = training.set)
+mod = train(lrn, task, subset = training.set)
 
 # Finally, to predict the outcome on new values, we use the predict method:
-pred <- predict(mod, newdata = iris[test.set,])
+pred = predict(mod, newdata = iris[test.set,])
 ``` 
 
 A data frame that contains the true and predicted class labels can be accessed via
@@ -97,7 +97,7 @@ head(pred$data)
 Alternatively, we can also predict directly from a task:
 
 ```{r}
-pred <- predict(mod, task = task, subset = test.set)
+pred = predict(mod, task = task, subset = test.set)
 head(as.data.frame(pred))
 ``` 
 
@@ -110,9 +110,9 @@ In order to get predicted posterior probabilities, we have to change the ``predi
 of the learner.
 
 ```{r}
-lrn <- makeLearner("classif.rpart", predict.type = "prob")
-mod <- train(lrn, task)
-pred <- predict(mod, newdata = iris[test.set,])
+lrn = makeLearner("classif.rpart", predict.type = "prob")
+mod = train(lrn, task)
+pred = predict(mod, newdata = iris[test.set,])
 head(pred$data)
 ``` 
 
@@ -143,10 +143,10 @@ predicts probabilities, train the learner and then predict the class labels.
 library("mlbench")
 data(Sonar)
 
-task <- makeClassifTask(data = Sonar, target = "Class", positive = "M")
-lrn <- makeLearner("classif.rpart", predict.type = "prob")
-mod <- train(lrn, task = task)
-pred <- predict(mod, task = task)
+task = makeClassifTask(data = Sonar, target = "Class", positive = "M")
+lrn = makeLearner("classif.rpart", predict.type = "prob")
+mod = train(lrn, task = task)
+pred = predict(mod, task = task)
 head(pred$data)
 ``` 
 
@@ -155,7 +155,7 @@ to map probabilities, to class labels using [setThreshold](http://berndbischl.gi
 the threshold for the *positive* class to 0.8:
 
 ```{r}
-pred <- setThreshold(pred, 0.8)
+pred = setThreshold(pred, 0.8)
 head(pred$data)
 pred$threshold
 ```
@@ -171,15 +171,15 @@ proceeding is analog to the classification case.
 library(mlbench)
 data(BostonHousing)
 
-task <- makeRegrTask(data = BostonHousing, target = "medv")
+task = makeRegrTask(data = BostonHousing, target = "medv")
 
-training.set <- seq(from = 1, to = nrow(BostonHousing), by = 2)
-test.set <- seq(from = 2, to = nrow(BostonHousing), by = 2)
+training.set = seq(from = 1, to = nrow(BostonHousing), by = 2)
+test.set = seq(from = 2, to = nrow(BostonHousing), by = 2)
 
-lrn <- makeLearner("regr.gbm", n.trees = 100)
-mod <- train(lrn, task, subset = training.set) 
+lrn = makeLearner("regr.gbm", n.trees = 100)
+mod = train(lrn, task, subset = training.set) 
 
-pred <- predict(mod, newdata = BostonHousing[test.set,])
+pred = predict(mod, newdata = BostonHousing[test.set,])
 
 head(pred$data)
 ```
