--- a/doc/tutorial/resample.Rmd
+++ b/doc/tutorial/resample.Rmd
@@ -29,12 +29,12 @@ Quick start
 library("mlr")
 
 ## Define a learning task and an appropriate learner
-task <- makeClassifTask(data = iris, target = "Species")
-lrn <- makeLearner("classif.lda")
+task = makeClassifTask(data = iris, target = "Species")
+lrn = makeLearner("classif.lda")
 
 ## Perform a 3-fold cross-validation 
-rdesc <- makeResampleDesc("CV", iters = 3)
-r <- resample(lrn, task, rdesc)
+rdesc = makeResampleDesc("CV", iters = 3)
+r = resample(lrn, task, rdesc)
 r
 ```
 
@@ -54,12 +54,12 @@ library("mlbench")
 data(BostonHousing)
 
 ## Define a learning task and an appropriate learner
-task <- makeRegrTask(data = BostonHousing, target = "medv")
-lrn <- makeLearner("regr.lm")
+task = makeRegrTask(data = BostonHousing, target = "medv")
+lrn = makeLearner("regr.lm")
 
 ## Perform a 3-fold cross-validation
-rdesc <- makeResampleDesc("CV", iters=3)
-r <- resample(lrn, task, rdesc)
+rdesc = makeResampleDesc("CV", iters=3)
+r = resample(lrn, task, rdesc)
 r
 ```
 
@@ -113,8 +113,8 @@ process as easy as possible.
 
 ```{r eval=FALSE}
 ## get the cv.instance directly 
-rdesc <- makeResampleDesc("CV", iters = 10)
-rinst  <- makeResampleInstance(rdesc, size = nrow(iris))
+rdesc = makeResampleDesc("CV", iters = 10)
+rinst  = makeResampleInstance(rdesc, size = nrow(iris))
 ``` 
 
 Asking the [ResampleDesc](http://berndbischl.github.io/mlr/man/makeResampleDesc.html) or [ResampleInstance](http://berndbischl.github.io/mlr/man/makeResampleInstance.html) objects for further
@@ -160,8 +160,8 @@ training and 1/3 test set. If there is just one iteration, the strategy
 is commonly called `holdout` or `test sample estimation`.
 
 ```{r eval=FALSE}
-rdesc <- makeResampleDesc("Subsample", iters = 10, split = 2/3)
-rdesc <- makeResampleDesc("Subsample", iters = 1, split = 2/3)
+rdesc = makeResampleDesc("Subsample", iters = 10, split = 2/3)
+rdesc = makeResampleDesc("Subsample", iters = 1, split = 2/3)
 ``` 
 
 ### `k`-fold cross-validation
@@ -171,7 +171,7 @@ In the *i*-th step of the *k* iterations the *i*-th subset is
 used as a test set, while the remaining parts form the training set.
 
 ```{r eval=FALSE}
-rdesc <- makeResampleDesc("CV", iters = 10)
+rdesc = makeResampleDesc("CV", iters = 10)
 ``` 
 
 ### Bootstrapping
@@ -183,7 +183,7 @@ while the remaining elements from *D*, i.e. elements not
 occuring in the training set, form the test set.
 
 ```{r eval=FALSE}
-rdesc <- makeResampleDesc("Bootstrap", iters = 10)
+rdesc = makeResampleDesc("Bootstrap", iters = 10)
 ``` 
 
 <!--(
@@ -218,11 +218,11 @@ cross-validation:
 
 ```{r}
 ## Classification task
-task <- makeClassifTask(data = iris, target = "Species")
+task = makeClassifTask(data = iris, target = "Species")
 
 ## Resample instance for Cross-validation
-rdesc <- makeResampleDesc("CV", iters = 3)
-rinst <- makeResampleInstance(rdesc, task = task)
+rdesc = makeResampleDesc("CV", iters = 3)
+rinst = makeResampleInstance(rdesc, task = task)
 ```
 
 Now, we fit a decision tree for each fold and measure both the mean misclassification 
@@ -231,20 +231,20 @@ error (`mmce`) and the accuracy (`acc`):
 ```{r}
 ## Merge learner (lrn), i.e. Decision Tree, classification task (task) and 
 ## resample instance (rinst)
-lrn <- makeLearner("classif.rpart")
-r1 <- resample(lrn, task, rinst, list(mmce, acc))
+lrn = makeLearner("classif.rpart")
+r1 = resample(lrn, task, rinst, list(mmce, acc))
 ```
 
 Let's set a couple of hyperparameters for rpart
 
 ```{r}
-lrn1 <- makeLearner("classif.rpart", minsplit = 10, cp = 0.03)
-r1 <- resample(lrn1, task, rinst, list(mmce, acc))  
+lrn1 = makeLearner("classif.rpart", minsplit = 10, cp = 0.03)
+r1 = resample(lrn1, task, rinst, list(mmce, acc))  
 
 
 ## Second resample for LDA as learner
-lrn2 <- makeLearner("classif.lda")
-r2 <- resample(lrn2, task, rinst, list(mmce, acc))	
+lrn2 = makeLearner("classif.lda")
+r2 = resample(lrn2, task, rinst, list(mmce, acc))	
 
 ## Let's see how well both classifiers did w.r.t mean misclassification error and accuracy
 r1
@@ -271,8 +271,7 @@ The latter value is the aggregation, i.e. by default the mean, of the three
 misclassification errors from the table above.
 Having a look at the single losses is of course possible as well.
 
-Regression example
-......................
+### Regression example
 
 Now, we use the ``BostonHousing`` data and compare the results of a Neural Net and a k-Nearest-Neighbor regression using out-of-bag bootstraping.
 
@@ -282,20 +281,20 @@ library("mlbench")
 data(BostonHousing)
 
 ## Regression task
-task <- makeRegrTask(data = BostonHousing, target = "medv")
+task = makeRegrTask(data = BostonHousing, target = "medv")
 
 ## Resample instance for bootstraping
-rdesc <- makeResampleDesc("Bootstrap", iters = 3)
-rinst <- makeResampleInstance(rdesc, task = task)
+rdesc = makeResampleDesc("Bootstrap", iters = 3)
+rinst = makeResampleInstance(rdesc, task = task)
 
-ms <- list(mse, medae)
+ms = list(mse, medae)
 
-lrn1 <- makeLearner("regr.nnet")
-r1 <- resample(lrn1, task, rinst, measures = ms)
+lrn1 = makeLearner("regr.nnet")
+r1 = resample(lrn1, task, rinst, measures = ms)
 
 ## Another resampling for the k-Nearest Neighbor regression
-lrn2 <- makeLearner("regr.kknn")
-r2 <- resample(lrn2, task, rinst, measures = ms)
+lrn2 = makeLearner("regr.kknn")
+r2 = resample(lrn2, task, rinst, measures = ms)
 ```
 
 Now, we can compare both methods regarding the **mse** (mean squared error) and the
