--- a/doc/tutorial/performance.Rmd
+++ b/doc/tutorial/performance.Rmd
@@ -26,10 +26,10 @@ the mean misclassification error (mmce) on the test data set.
 ```{r}
 library("mlr")
 
-task <- makeClassifTask(data = iris, target = "Species")
-lrn <- makeLearner("classif.lda")
-mod <- train(lrn, task = task, subset = seq(1,150,2))
-pred <- predict(mod, task = task, subset = seq(2,150,2))
+task = makeClassifTask(data = iris, target = "Species")
+lrn = makeLearner("classif.lda")
+mod = train(lrn, task = task, subset = seq(1,150,2))
+pred = predict(mod, task = task, subset = seq(2,150,2))
 
 performance(pred, measures = mmce)
 ``` 
@@ -50,7 +50,7 @@ Of course we can also calculate multiple performance measures at once simply by 
 can also include [your own measure](create_measure.md).
 
 ```{r}
-ms <- list("mmce" = mmce, "acc" = acc, "timetrain" = timetrain, "timeboth" = timeboth)
+ms = list("mmce" = mmce, "acc" = acc, "timetrain" = timetrain, "timeboth" = timeboth)
 performance(pred = pred, measures = ms, model = mod)
 ```
 
@@ -64,10 +64,10 @@ the accuracy, as well as the false positive and false negative rates are compute
 library("mlbench")
 data(Sonar)
 
-task <- makeClassifTask(data = Sonar, target = "Class", positive = "M")
-lrn <- makeLearner("classif.rpart")
-mod <- train(lrn, task = task)
-pred <- predict(mod, task = task)
+task = makeClassifTask(data = Sonar, target = "Class", positive = "M")
+lrn = makeLearner("classif.rpart")
+mod = train(lrn, task = task)
+pred = predict(mod, task = task)
 
 performance(pred, measures = acc)
 performance(pred, measures = fpr)
@@ -83,10 +83,10 @@ probabilities are predicted, i.e. set the predict type of the [Learner](http://b
 library("mlbench")
 data(Sonar)
 
-task <- makeClassifTask(data = Sonar, target = "Class", positive = "M")
-lrn <- makeLearner("classif.rpart", predict.type = "prob")
-mod <- train(lrn, task = task)
-pred <- predict(mod, task = task)
+task = makeClassifTask(data = Sonar, target = "Class", positive = "M")
+lrn = makeLearner("classif.rpart", predict.type = "prob")
+mod = train(lrn, task = task)
+pred = predict(mod, task = task)
 
 performance(pred, measures = auc)
 ``` 
@@ -106,21 +106,21 @@ errors on the test data set.
 library(mlbench)
 data(BostonHousing)
 
-task <- makeRegrTask(data = BostonHousing, target = "medv")
+task = makeRegrTask(data = BostonHousing, target = "medv")
 
 ## Training and test set indices 
-training.set <- seq(from = 1, to = nrow(BostonHousing), by = 2)
-test.set <- seq(from = 2, to = nrow(BostonHousing), by = 2)
+training.set = seq(from = 1, to = nrow(BostonHousing), by = 2)
+test.set = seq(from = 2, to = nrow(BostonHousing), by = 2)
 
 ## Gradient Boosting Machine on training set 
-lrn <- makeLearner("regr.gbm", n.trees = 1000)
-mod <- train(lrn, task, subset = training.set) 
+lrn = makeLearner("regr.gbm", n.trees = 1000)
+mod = train(lrn, task, subset = training.set) 
 
 ## Prediction on test set data 
-pred <- predict(mod, newdata = BostonHousing[test.set, ])
+pred = predict(mod, newdata = BostonHousing[test.set, ])
 
 ## Compare predicted and true labels using measures MSE and MAE
-ms <- list("mse" = mse, "mae" = mae)
+ms = list("mse" = mse, "mae" = mae)
 sapply(ms, function(meas) performance(pred, measures = meas))
 ```
 
