--- a/doc/tutorial/task.Rmd
+++ b/doc/tutorial/task.Rmd
@@ -28,9 +28,9 @@ library("mlr")
 library("mlbench")
 data(BreastCancer)
 
-df <- BreastCancer
-df$Id <- NULL
-task <- makeClassifTask(id = "BreastCancer", data = df, target = "Class")
+df = BreastCancer
+df$Id = NULL
+task = makeClassifTask(id = "BreastCancer", data = df, target = "Class")
 ``` 
 
 Now, let us examine the created task:
@@ -53,8 +53,8 @@ We will generally take the ``BostonHousing`` data set as regression example.
 library("mlr")
 library("mlbench")
 data(BostonHousing)
-df <- BostonHousing
-task <- makeRegrTask(id = "BostonHousing", data = df, target = "medv")
+df = BostonHousing
+task = makeRegrTask(id = "BostonHousing", data = df, target = "medv")
 task
 ```
 
@@ -71,9 +71,9 @@ library("mlr")
 library("mlbench")
 data(BreastCancer)
 
-df <- BreastCancer
-df$Id <- NULL
-task <- makeClassifTask(id = "BreastCancer", data = df, target = "Class")
+df = BreastCancer
+df$Id = NULL
+task = makeClassifTask(id = "BreastCancer", data = df, target = "Class")
 task
 ``` 
 
@@ -83,7 +83,7 @@ levels of the target. You probably want to select this manually for
 your applications.
 
 ```{r}
-task <- makeClassifTask(id = "BreastCancer", data = df, target = "Class", 
+task = makeClassifTask(id = "BreastCancer", data = df, target = "Class", 
                         positive = "malignant")
 ``` 
 
@@ -130,8 +130,8 @@ level belong to the same block.
 Now, let's include a (nonsensical) blocking structure:
 
 ```{r}
-blocking <- factor(rep(1:3, nrow(BreastCancer)/3))
-task <- makeClassifTask(id = "BreastCancer", data = df, target = "Class", 
+blocking = factor(rep(1:3, nrow(BreastCancer)/3))
+task = makeClassifTask(id = "BreastCancer", data = df, target = "Class", 
                       blocking = blocking)
 head(task$blocking)
 table(task$blocking)
@@ -148,7 +148,7 @@ Before that, let's look at the regression experiment again.
 library("mlr")
 library("mlbench")
 data(BostonHousing)
-task <- makeRegrTask(data = BostonHousing, target = "medv")
+task = makeRegrTask(data = BostonHousing, target = "medv")
 task
 ```
 
