analyzeFeatSelResult (incl Tutorial)

--- a/doc/tutorial/variable_selection.Rmd
+++ b/doc/tutorial/variable_selection.Rmd
@@ -60,6 +60,7 @@ rdesc = makeResampleDesc("Holdout")
 ctrlSeq = makeFeatSelControlSequential(method="sfs")
 sfSeq = selectFeatures(learner=lrn, task=task, resampling=rdesc, control=ctrlSeq)
 sfSeq
+analyzeFeatSelResult(sfSeq, reduce=FALSE)
 ``` 
 
 
@@ -78,5 +79,6 @@ rdesc = makeResampleDesc("Holdout")
 ctrlGA = makeFeatSelControlGA(maxit=10)
 sfGA = selectFeatures(learner=lrn, task=task, resampling=rdesc, control=ctrlGA, show.info=FALSE)
 sfGA
+analyzeFeatSelResult(sfGA)
 ```
 
