--- a/doc/tutorial/variable_selection.Rmd
+++ b/doc/tutorial/variable_selection.Rmd
@@ -10,7 +10,7 @@ Different approaches exist, in order to figure out, which the relevant variables
 Filter
 ------
 
-Filters are the most simple approach to find variables that do not contain a lot of additional information and thus can be left out.
+Filters are the simplest approach to find variables that do not contain a lot of additional information and thus can be left out.
 Different methods are built into **mlr**'s function `filterFeatures()` all accessing filter algorithms from the package `FSelector`.
 The function is given a `task` and simply returns an importance vector.
 ```{r}
@@ -38,7 +38,7 @@ sfeats = sapply(rsres$models, getFilteredFeatures)
 table(sfeats)
 ```
 The selection of features seems to be very stable.
-The `Sepa.Width` did not made it into a singe fold.
+The `Sepal.Width` did not make it into a single fold.
 
 Wrapper
 -------
