--- a/doc/tutorial/tune.Rmd
+++ b/doc/tutorial/tune.Rmd
@@ -102,8 +102,8 @@ Now, we can run our nested CV. For further evaluations, we might
 want to extract the tune results as well. Please note, that storing the
 entire models might be expensive.
 
-```{r, message=FALSE}
-r = resample(lrn, task, resampling = rout, extract = getTuneResult)
+```{r}
+r = resample(lrn, task, resampling = rout, extract = getTuneResult, show.info = FALSE)
 ```
 
 Finally, we can compare our results. We receive one optimal setting for
