more consistant names in tutorial

--- a/doc/tutorial/makeBaggingWrapper.Rmd
+++ b/doc/tutorial/makeBaggingWrapper.Rmd
@@ -2,7 +2,7 @@
 set.seed(1)
 ```
 
-Bagging Wrapper
+Generic bagging
 ========================================================
 
 One reason why *Random Forrests* perform so well ist that they are using Bagging as a technique to gain more stability.
